force-app/main/default/objects/Item__c/fields/AdminCharge__c.field-meta.xml
<CustomField>
    <fullName>AdminCharge__c</fullName>
    <description>The default administrative charge percent for this item.</description>
    <inlineHelpText>The default administrative charge percent for this item.</inlineHelpText>
    <label>Admin Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>