force-app/main/default/objects/Item__c/fields/AllowDecimalQuantities__c.field-meta.xml
<CustomField>
    <fullName>AllowDecimalQuantities__c</fullName>
    <description>Determines whether a decimal part is allowed for quantities of this item.</description>
    <inlineHelpText>Determines whether a decimal part is allowed for quantities of this item.</inlineHelpText>
    <label>Allow Decimal Quantities</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>