force-app/main/default/objects/Item__c/fields/AlternateLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>AlternateLanguageCode__c</fullName>
    <description>Identifies the language in which alternate language fields are specified.</description>
    <inlineHelpText>Identifies the language in which alternate language fields are specified.</inlineHelpText>
    <label>Alternate Language Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>