force-app/main/default/objects/Item__c/fields/AlternateNameDE__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameDE__c</fullName>
    <description>Name in German.</description>
    <inlineHelpText>Name in German.</inlineHelpText>
    <label>Alternate Name DE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>