force-app/main/default/objects/Item__c/fields/AlternateNameHU__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameHU__c</fullName>
    <description>Name in Hungarian.</description>
    <inlineHelpText>Name in Hungarian.</inlineHelpText>
    <label>Alternate Name HU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>