force-app/main/default/objects/Item__c/fields/AlternateNameJA__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameJA__c</fullName>
    <description>Name in Japanese.</description>
    <inlineHelpText>Name in Japanese.</inlineHelpText>
    <label>Alternate Name JA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>