force-app/main/default/objects/Item__c/fields/AlternateNameTR__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameTR__c</fullName>
    <description>Name in Turkish.</description>
    <inlineHelpText>Name in Turkish.</inlineHelpText>
    <label>Alternate Name TR</label>
    <length>80</length>
    <type>Text</type>
</CustomField>