force-app/main/default/objects/Item__c/fields/AlternateNameZHTW__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameZHTW__c</fullName>
    <description>Name in Chinese (Traditional).</description>
    <inlineHelpText>Name in Chinese (Traditional).</inlineHelpText>
    <label>Alternate Name ZHTW</label>
    <length>80</length>
    <type>Text</type>
</CustomField>