force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionDE__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionDE__c</fullName>
    <description>Rich Description in German.</description>
    <inlineHelpText>Rich Description in German.</inlineHelpText>
    <label>Alternate Rich Description DE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>