force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionEL__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionEL__c</fullName>
    <description>Rich Description in Greek.</description>
    <inlineHelpText>Rich Description in Greek.</inlineHelpText>
    <label>Alternate Rich Description EL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>