force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionENUS__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionENUS__c</fullName>
    <description>Rich Description in English.</description>
    <inlineHelpText>Rich Description in English.</inlineHelpText>
    <label>Alternate Rich Description ENUS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>