force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionES__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionES__c</fullName>
    <description>Rich Description in Spanish.</description>
    <inlineHelpText>Rich Description in Spanish.</inlineHelpText>
    <label>Alternate Rich Description ES</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>