force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionFR__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionFR__c</fullName>
    <description>Rich Description in French.</description>
    <inlineHelpText>Rich Description in French.</inlineHelpText>
    <label>Alternate Rich Description FR</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>