force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionHU__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionHU__c</fullName>
    <description>Rich Description in Hungarian.</description>
    <inlineHelpText>Rich Description in Hungarian.</inlineHelpText>
    <label>Alternate Rich Description HU</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>