force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionIT__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionIT__c</fullName>
    <description>Rich Description in Italian.</description>
    <inlineHelpText>Rich Description in Italian.</inlineHelpText>
    <label>Alternate Rich Description IT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>