force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionJA__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionJA__c</fullName>
    <description>Rich Description in Japanese.</description>
    <inlineHelpText>Rich Description in Japanese.</inlineHelpText>
    <label>Alternate Rich Description JA</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>