force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionNLNL__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionNLNL__c</fullName>
    <description>Rich Description in Dutch.</description>
    <inlineHelpText>Rich Description in Dutch.</inlineHelpText>
    <label>Alternate Rich Description NLNL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>