force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionPL__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionPL__c</fullName>
    <description>Rich Description in Polish.</description>
    <inlineHelpText>Rich Description in Polish.</inlineHelpText>
    <label>Alternate Rich Description PL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>