force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionPTBR__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionPTBR__c</fullName>
    <description>Rich Description in Portuguese (Brazil).</description>
    <inlineHelpText>Rich Description in Portuguese (Brazil).</inlineHelpText>
    <label>Alternate Rich Description PTBR</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>