force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionPTPT__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionPTPT__c</fullName>
    <description>Rich Description in Portuguese (Portugal).</description>
    <inlineHelpText>Rich Description in Portuguese (Portugal).</inlineHelpText>
    <label>Alternate Rich Description PTPT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>