force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionRU__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionRU__c</fullName>
    <description>Rich Description in Russian.</description>
    <inlineHelpText>Rich Description in Russian.</inlineHelpText>
    <label>Alternate Rich Description RU</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>