force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionTR__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionTR__c</fullName>
    <description>Rich Description in Turkish.</description>
    <inlineHelpText>Rich Description in Turkish.</inlineHelpText>
    <label>Alternate Rich Description TR</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>