force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionZHCN__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionZHCN__c</fullName>
    <description>Rich Description in Chinese (Simplified).</description>
    <inlineHelpText>Rich Description in Chinese (Simplified).</inlineHelpText>
    <label>Alternate Rich Description ZHCN</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>