force-app/main/default/objects/Item__c/fields/AlternateRichDescriptionZHTW__c.field-meta.xml
<CustomField>
    <fullName>AlternateRichDescriptionZHTW__c</fullName>
    <description>Rich Description in Chinese (Traditional).</description>
    <inlineHelpText>Rich Description in Chinese (Traditional).</inlineHelpText>
    <label>Alternate Rich Description ZHTW</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>