force-app/main/default/objects/Item__c/fields/AlternateServingUnit__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnit__c</fullName>
    <description>Serving unit in alternate language.</description>
    <inlineHelpText>Serving unit in alternate language.</inlineHelpText>
    <label>Alternate Serving Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>