force-app/main/default/objects/Item__c/fields/AlternateServingUnitDE__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitDE__c</fullName>
    <description>Serving Unit in German.</description>
    <inlineHelpText>Serving Unit in German.</inlineHelpText>
    <label>Alternate Serving Unit DE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>