force-app/main/default/objects/Item__c/fields/AlternateServingUnitEL__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitEL__c</fullName>
    <description>Serving Unit in Greek.</description>
    <inlineHelpText>Serving Unit in Greek.</inlineHelpText>
    <label>Alternate Serving Unit EL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>