force-app/main/default/objects/Item__c/fields/AlternateServingUnitENUS__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitENUS__c</fullName>
    <description>Serving Unit in English.</description>
    <inlineHelpText>Serving Unit in English.</inlineHelpText>
    <label>Alternate Serving Unit ENUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>