force-app/main/default/objects/Item__c/fields/AlternateServingUnitES__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitES__c</fullName>
    <description>Serving Unit in Spanish.</description>
    <inlineHelpText>Serving Unit in Spanish.</inlineHelpText>
    <label>Alternate Serving Unit ES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>