force-app/main/default/objects/Item__c/fields/AlternateServingUnitFR__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitFR__c</fullName>
    <description>Serving Unit in French.</description>
    <inlineHelpText>Serving Unit in French.</inlineHelpText>
    <label>Alternate Serving Unit FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>