force-app/main/default/objects/Item__c/fields/AlternateServingUnitHU__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitHU__c</fullName>
    <description>Serving Unit in Hungarian.</description>
    <inlineHelpText>Serving Unit in Hungarian.</inlineHelpText>
    <label>Alternate Serving Unit HU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>