force-app/main/default/objects/Item__c/fields/AlternateServingUnitIT__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitIT__c</fullName>
    <description>Serving Unit in Italian.</description>
    <inlineHelpText>Serving Unit in Italian.</inlineHelpText>
    <label>Alternate Serving Unit IT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>