force-app/main/default/objects/Item__c/fields/AlternateServingUnitJA__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitJA__c</fullName>
    <description>Serving Unit in Japanese.</description>
    <inlineHelpText>Serving Unit in Japanese.</inlineHelpText>
    <label>Alternate Serving Unit JA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>