force-app/main/default/objects/Item__c/fields/AlternateServingUnitNLNL__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitNLNL__c</fullName>
    <description>Serving Unit in Dutch.</description>
    <inlineHelpText>Serving Unit in Dutch.</inlineHelpText>
    <label>Alternate Serving Unit NLNL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>