force-app/main/default/objects/Item__c/fields/AlternateServingUnitPL__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitPL__c</fullName>
    <description>Serving Unit in Polish.</description>
    <inlineHelpText>Serving Unit in Polish.</inlineHelpText>
    <label>Alternate Serving Unit PL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>