force-app/main/default/objects/Item__c/fields/AlternateServingUnitPTBR__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitPTBR__c</fullName>
    <description>Serving Unit in Portuguese (Brazil).</description>
    <inlineHelpText>Serving Unit in Portuguese (Brazil).</inlineHelpText>
    <label>Alternate Serving Unit PTBR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>