force-app/main/default/objects/Item__c/fields/AlternateServingUnitPTPT__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitPTPT__c</fullName>
    <description>Serving Unit in Portuguese (Portugal).</description>
    <inlineHelpText>Serving Unit in Portuguese (Portugal).</inlineHelpText>
    <label>Alternate Serving Unit PTPT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>