force-app/main/default/objects/Item__c/fields/AlternateServingUnitRU__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitRU__c</fullName>
    <description>Serving Unit in Russian.</description>
    <inlineHelpText>Serving Unit in Russian.</inlineHelpText>
    <label>Alternate Serving Unit RU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>