force-app/main/default/objects/Item__c/fields/AlternateServingUnitTR__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitTR__c</fullName>
    <description>Serving Unit in Turkish.</description>
    <inlineHelpText>Serving Unit in Turkish.</inlineHelpText>
    <label>Alternate Serving Unit TR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>