force-app/main/default/objects/Item__c/fields/AlternateServingUnitZHCN__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitZHCN__c</fullName>
    <description>Serving Unit in Chinese (Simplified).</description>
    <inlineHelpText>Serving Unit in Chinese (Simplified).</inlineHelpText>
    <label>Alternate Serving Unit ZHCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>