force-app/main/default/objects/Item__c/fields/AlternateServingUnitZHTW__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnitZHTW__c</fullName>
    <description>Serving Unit in Chinese (Traditional).</description>
    <inlineHelpText>Serving Unit in Chinese (Traditional).</inlineHelpText>
    <label>Alternate Serving Unit ZHTW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>