force-app/main/default/objects/Item__c/fields/AlternateSoldByUnit__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnit__c</fullName>
    <description>Sold By in alternate language.</description>
    <inlineHelpText>Sold By in alternate language.</inlineHelpText>
    <label>Alternate Sold By Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>