force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitDE__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitDE__c</fullName>
    <description>Sold By Unit in German.</description>
    <inlineHelpText>Sold By Unit in German.</inlineHelpText>
    <label>Alternate Sold By Unit DE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>