force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitEL__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitEL__c</fullName>
    <description>Sold By Unit in Greek.</description>
    <inlineHelpText>Sold By Unit in Greek.</inlineHelpText>
    <label>Alternate Sold By Unit EL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>