force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitENUS__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitENUS__c</fullName>
    <description>Sold By Unit in English.</description>
    <inlineHelpText>Sold By Unit in English.</inlineHelpText>
    <label>Alternate Sold By Unit ENUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>