force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitES__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitES__c</fullName>
    <description>Sold By Unit in Spanish.</description>
    <inlineHelpText>Sold By Unit in Spanish.</inlineHelpText>
    <label>Alternate Sold By Unit ES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>