force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitFR__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitFR__c</fullName>
    <description>Sold By Unit in French.</description>
    <inlineHelpText>Sold By Unit in French.</inlineHelpText>
    <label>Alternate Sold By Unit FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>