force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitHU__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitHU__c</fullName>
    <description>Sold By Unit in Hungarian.</description>
    <inlineHelpText>Sold By Unit in Hungarian.</inlineHelpText>
    <label>Alternate Sold By Unit HU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>