force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitIT__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitIT__c</fullName>
    <description>Sold By Unit in Italian.</description>
    <inlineHelpText>Sold By Unit in Italian.</inlineHelpText>
    <label>Alternate Sold By Unit IT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>