force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitJA__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitJA__c</fullName>
    <description>Sold By Unit in Japanese.</description>
    <inlineHelpText>Sold By Unit in Japanese.</inlineHelpText>
    <label>Alternate Sold By Unit JA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>