force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitNLNL__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitNLNL__c</fullName>
    <description>Sold By Unit in Dutch.</description>
    <inlineHelpText>Sold By Unit in Dutch.</inlineHelpText>
    <label>Alternate Sold By Unit NLNL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>