force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitPL__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitPL__c</fullName>
    <description>Sold By Unit in Polish.</description>
    <inlineHelpText>Sold By Unit in Polish.</inlineHelpText>
    <label>Alternate Sold By Unit PL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>