force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitPTBR__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitPTBR__c</fullName>
    <description>Sold By Unit in Portuguese (Brazil).</description>
    <inlineHelpText>Sold By Unit in Portuguese (Brazil).</inlineHelpText>
    <label>Alternate Sold By Unit PTBR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>