force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitPTPT__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitPTPT__c</fullName>
    <description>Sold By Unit in Portuguese (Portugal).</description>
    <inlineHelpText>Sold By Unit in Portuguese (Portugal).</inlineHelpText>
    <label>Alternate Sold By Unit PTPT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>