force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitRU__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitRU__c</fullName>
    <description>Sold By Unit in Russian.</description>
    <inlineHelpText>Sold By Unit in Russian.</inlineHelpText>
    <label>Alternate Sold By Unit RU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>