force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitTR__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitTR__c</fullName>
    <description>Sold By Unit in Turkish.</description>
    <inlineHelpText>Sold By Unit in Turkish.</inlineHelpText>
    <label>Alternate Sold By Unit TR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>