force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitZHCN__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitZHCN__c</fullName>
    <description>Sold By Unit in Chinese (Simplified).</description>
    <inlineHelpText>Sold By Unit in Chinese (Simplified).</inlineHelpText>
    <label>Alternate Sold By Unit ZHCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>