force-app/main/default/objects/Item__c/fields/AlternateSoldByUnitZHTW__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnitZHTW__c</fullName>
    <description>Sold By Unit in Chinese (Traditional).</description>
    <inlineHelpText>Sold By Unit in Chinese (Traditional).</inlineHelpText>
    <label>Alternate Sold By Unit ZHTW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>