force-app/main/default/objects/Item__c/fields/BeoSection__c.field-meta.xml
<CustomField>
    <fullName>BeoSection__c</fullName>
    <description>The DocumentSection where created Event Items, based on this Item will be shown.</description>
    <inlineHelpText>The DocumentSection where created Event Items, based on this Item will be shown.</inlineHelpText>
    <label>Beo Section</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>DocumentSection__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>BeoSection</relationshipName>
    <type>Lookup</type>
</CustomField>