force-app/main/default/objects/Item__c/fields/DoNotPrintOnBeo__c.field-meta.xml
<CustomField>
    <fullName>DoNotPrintOnBeo__c</fullName>
    <description>Don&apos;t print this item on the Banquet Event Order.</description>
    <inlineHelpText>Don&apos;t print this item on the Banquet Event Order.</inlineHelpText>
    <label>Do Not Print On Beo</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>