force-app/main/default/objects/Item__c/fields/DoNotPrintOnCheck__c.field-meta.xml
<CustomField>
    <fullName>DoNotPrintOnCheck__c</fullName>
    <description>Don&apos;t print on banquet check.</description>
    <inlineHelpText>Don&apos;t print on banquet check.</inlineHelpText>
    <label>Do Not Print On Check</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>