force-app/main/default/objects/Item__c/fields/EstimatedConsumptionPercentage__c.field-meta.xml
<CustomField>
    <fullName>EstimatedConsumptionPercentage__c</fullName>
    <description>The estimated percentage of attendees who will consume this item.</description>
    <inlineHelpText>The estimated percentage of attendees who will consume this item.</inlineHelpText>
    <label>Estimated Consumption Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>