force-app/main/default/objects/Item__c/fields/Gratuity__c.field-meta.xml
<CustomField>
    <fullName>Gratuity__c</fullName>
    <description>The default gratuity percent for this item.</description>
    <inlineHelpText>The default gratuity percent for this item.</inlineHelpText>
    <label>Gratuity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>