force-app/main/default/objects/Item__c/fields/HidePriceOnBeo__c.field-meta.xml
<CustomField>
    <fullName>HidePriceOnBeo__c</fullName>
    <description>Don&apos;t show the item price on the Banquet Event Order.</description>
    <inlineHelpText>Don&apos;t show the item price on the Banquet Event Order.</inlineHelpText>
    <label>Hide Price On Beo</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>