force-app/main/default/objects/Item__c/fields/HideQuantityOnBeo__c.field-meta.xml
<CustomField>
    <fullName>HideQuantityOnBeo__c</fullName>
    <description>Don&apos;t show the item quantity on the Banquet Event Order.</description>
    <inlineHelpText>Don&apos;t show the item quantity on the Banquet Event Order.</inlineHelpText>
    <label>Hide Quantity On Beo</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>