force-app/main/default/objects/Item__c/fields/HideServeTimesOnBeo__c.field-meta.xml
<CustomField>
    <fullName>HideServeTimesOnBeo__c</fullName>
    <description>Don&apos;t show the item serve times on the Banquet Event Order.</description>
    <inlineHelpText>Don&apos;t show the item serve times on the Banquet Event Order.</inlineHelpText>
    <label>Hide Serve Times On Beo</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>