force-app/main/default/objects/Item__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <description>The total number of this item available at the location.</description>
    <inlineHelpText>The total number of this item available at the location.</inlineHelpText>
    <label>Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>