force-app/main/default/objects/Item__c/fields/IsInclusive__c.field-meta.xml
<CustomField>
    <fullName>IsInclusive__c</fullName>
    <description>Indicates that the specified Unit Price includes inclusive taxes, admin charge, and gratuity.</description>
    <inlineHelpText>Indicates that the specified Unit Price includes inclusive taxes, admin charge, and gratuity.</inlineHelpText>
    <label>Is Inclusive</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>