force-app/main/default/objects/Item__c/fields/ItemCategory__c.field-meta.xml
<CustomField>
    <fullName>ItemCategory__c</fullName>
    <description>Categorizes the item for filtering and reporting.</description>
    <inlineHelpText>Categorizes the item for filtering and reporting.</inlineHelpText>
    <label>Item Category</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>SetupValue__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>ItemCategory</relationshipName>
    <type>Lookup</type>
</CustomField>