force-app/main/default/objects/Item__c/fields/ItemTag1__c.field-meta.xml
<CustomField>
    <fullName>ItemTag1__c</fullName>
    <description>Item tags for filtering and reporting.</description>
    <inlineHelpText>Item tags for filtering and reporting.</inlineHelpText>
    <label>Item Tag1</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>SetupValue__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>ItemTag1</relationshipName>
    <type>Lookup</type>
</CustomField>