force-app/main/default/objects/Item__c/fields/ItemTag2__c.field-meta.xml
<CustomField>
    <fullName>ItemTag2__c</fullName>
    <description>Item tags for filtering and reporting.</description>
    <inlineHelpText>Item tags for filtering and reporting.</inlineHelpText>
    <label>Item Tag2</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>SetupValue__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>ItemTag2</relationshipName>
    <type>Lookup</type>
</CustomField>