force-app/main/default/objects/Item__c/fields/ItemTagsName__c.field-meta.xml
<CustomField>
    <fullName>ItemTagsName__c</fullName>
    <description>Categorizes the item for filtering and reporting.</description>
    <inlineHelpText>Categorizes the item for filtering and reporting.</inlineHelpText>
    <label>Item Tags Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>