force-app/main/default/objects/Item__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <description>Specifies whether this item is a single item, a menu, or a text item for display on a BEO.  VALUE OPTIONS ARE FIXED BY DELPHI.FDC AND SHOULD NOT BE MODIFIED.</description>
    <inlineHelpText>Specifies whether this item is a single item, a menu, or a text item for display on a BEO.  VALUE OPTIONS ARE FIXED BY DELPHI.FDC AND SHOULD NOT BE MODIFIED.</inlineHelpText>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>