force-app/main/default/objects/Item__c/fields/QuantityCalculation__c.field-meta.xml
<CustomField>
    <fullName>QuantityCalculation__c</fullName>
    <description>If Per Event, then quantities will be calculated as per the whole event, e.g. with a factor of 1. If Per Person, then quantities will be calculated by multiplying by number of attendees. VALUE OPTIONS ARE FIXED BY DELPHI.FDC AND SHOULD NOT BE MODIFIED.</description>
    <inlineHelpText>If Per Event, then quantities will be calculated as per the whole event, e.g. with a factor of 1. If Per Person, then quantities will be calculated by multiplying by number of attendees. VALUE OPTIONS ARE FIXED BY DELPHI.FDC AND SHOULD NOT BE MODIFIED.</inlineHelpText>
    <label>Quantity Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>